clusters/aws-dev-mgmt2/flux/cluster-apps/policy-reporter/policy-reporter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: https://raw.githubusercontent.com/kyverno/website/main/assets/icons/logo.svg
    forecastle.stakater.com/appName: Policy Reporter
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.${CLUSTER_FQDN}/oauth2/start?rd=$scheme://$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.${CLUSTER_FQDN}/oauth2/auth
  name: policy-reporter
  namespace: policy-reporter
spec:
  ingressClassName: nginx
  rules:
    - host: policy-reporter.${CLUSTER_FQDN}
      http:
        paths:
          - backend:
              service:
                name: policy-reporter-ui
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - policy-reporter.${CLUSTER_FQDN}
